fix(git): install commitlint-circle prior to running it
https://github.com/fathyb/commitlint-circle/issues/5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,7 @@ jobs:
 
         steps:
             - checkout
+            - run: npm i commitlint-circle
             - run:
                   name: Lint commits
                   command: npx commitlint-circle
