fix(git): install dependencies on CircleCI as usual

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,18 @@ jobs:
 
         steps:
             - checkout
-            - run: npm i --only=dev
+            # Download and cache dependencies
+            - restore_cache:
+                  keys:
+                      - v2-dependencies-latest-{{ checksum "package.json" }}
+
+            - run:
+                  name: Remove unnecessary Dependencies
+                  command: npm ls || true ; npm prune
+            - run:
+                  name: Install Dependencies
+                  command: npm install
+
             - run:
                   name: Lint commits
                   command: npm run commitlint -- --ci
