--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^24.1.0",
     "jest-circus": "^24.7.1",
     "jest-extended": "^0.11.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
     "semantic-commitlint": "^1.3.2",
