--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ansi-colors": "^3.2.4",
     "colors": "^1.3.3",
     "commitizen": "^3.1.1",
-    "commitlint-circle": "^1.0.0",
+    "commitlint-circle": "github:ls-age/commitlint-circle#c2c7ae1b69b7dc166eb9b4e76ace6e4ab2e34597",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.16.0",
