--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,8 +17,8 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				"DEBUG": "zwave:(controller|driver)"
-				// "NO_CACHE": "true"
+				"DEBUG": "zwave:(controller)",
+				"NO_CACHE": "true"
 			},
 			"console": "integratedTerminal",
 			"sourceMaps": true
