--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "@types/node": "^12.0.0",
     "@types/semver": "^6.0.0",
     "@types/serialport": "^7.0.1",
+    "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "ansi-colors": "^3.2.4",
-    "colors": "^1.3.3",
     "commitizen": "^3.1.1",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^2.1.0",
