feat(log): visually group multi-line logs using box-drawing characters

--- a/src/tsconfig.build.json
+++ b/src/tsconfig.build.json
@@ -3,8 +3,7 @@
 	"compilerOptions": {
 		"noEmit": false,
 		"declaration": true,
-		"declarationMap": true,
-		"noImplicitAny": true
+		"declarationMap": true
 	},
 	"include": ["./**/*.ts"],
 	"exclude": ["./**/*.test.ts"]
