--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 		"moduleResolution": "node",
 		"noEmitOnError": true,
 		"noImplicitAny": true,
+		"noImplicitThis": true,
 		"outDir": "build/",
 		"removeComments": false,
 		"experimentalDecorators": true,
