chore(lint): enable ESLint extension for typescript files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,12 @@
 	"eslint.enable": true,
 	"editor.formatOnSave": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"typescript",
+		"typescriptreact"
+	],
 	"[typescript]": {
 		"editor.codeActionsOnSave": {
 			"source.organizeImports": true
