--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/fs-extra": "^7.0.0",
     "@types/jest": "^24.0.9",
     "@types/json5": "0.0.30",
+    "@types/mockdate": "^2.0.0",
     "@types/node": "^12.0.0",
     "@types/semver": "^6.0.0",
     "@types/serialport": "^7.0.1",
@@ -52,6 +53,7 @@
     "jest": "^24.1.0",
     "jest-circus": "^24.7.1",
     "jest-extended": "^0.11.1",
+    "mockdate": "2.0.2",
     "prettier": "^1.17.0",
     "rimraf": "^2.6.3",
     "semver": "^6.0.0",
