--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "ansi-colors": "^4.0.1",
+    "clipboardy": "^2.1.0",
     "colors": "^1.3.3",
     "commitizen": "^3.1.1",
     "coveralls": "^3.0.3",
@@ -89,6 +90,7 @@
     "lint": "npm run lint:ts && npm run lint:wotan",
     "release": "ts-node maintenance/release.ts",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
+    "gh-cc-table": "npm run implemented_ccs -- --flavor=github --only-incomplete",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
     "commit": "git-cz"
   },
