feat(ts): enable strictBindCallApply

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"skipLibCheck": true,
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
+		"strictBindCallApply": true,
 		"watch": false, // true breaks circleci
 		"pretty": true
 	},
