ci: add config folder to whitelist
so it is present in coverage tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ only_tags: &only_tags
 whitelist: &whitelist
     paths:
         - build/*
+        - config/*
         - node_modules/*
         - src/*
         - test/*
