--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				"NO_CACHE": "true",
+				// "NO_CACHE": "true",
 				"LOGLEVEL": "info"
 			},
 			"console": "integratedTerminal",
