build(test): enable Babel once more
hopefully this removes the cache issues we have with ts-jest

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"noEmit": false,
+		"isolatedModules": false,
 		"declaration": true,
 		"declarationMap": true,
 		"rootDir": "./src"
