--- a/package.json
+++ b/package.json
@@ -25,6 +25,14 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.3.3",
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@fimbul/mithotyn": "^0.21.0",
@@ -76,14 +84,16 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "watch": "npm run build -- --watch",
+    "check": "npm run build -- --noEmit",
+    "check:watch": "npm run check -- --watch",
     "generateCCAPIInterface": "ts-node maintenance/generateCCAPIInterface.ts",
     "cleanBuildDir": "rimraf ./build",
     "prebuild": "npm run generateCCAPIInterface",
     "prewatch": "npm run generateCCAPIInterface",
     "prepublishOnly": "npm run cleanBuildDir && npm run build",
-    "watch": "tsc -p tsconfig.build.json --watch",
     "test:reset": "jest --clear-cache",
-    "test:ts": "jest --maxWorkers=1",
+    "test:ts": "jest --runInBand",
     "test:watch": "npm run test:ts -- --watch",
     "test": "npm run test:watch",
     "coverage": "npm run test:ts -- --collect-coverage",
