--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
 				"displayErrorsAsWarnings": true
 			}
 		],
+
+		// To enable Babel support
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"isolatedModules": true,
+
 		"noEmit": true,
 		"declaration": false,
 		"module": "commonjs",
