feat(cc): rework ConfigurationCC to use metadata instead of a value

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
 				"${workspaceFolder}/test/run.ts"
 			],
 			"env": {
-				// "NO_CACHE": "true",
+				"NO_CACHE": "true",
 				"LOGLEVEL": "info"
 			},
 			"console": "integratedTerminal",
