--- a/maintenance/tsconfig.json
+++ b/maintenance/tsconfig.json
@@ -7,7 +7,8 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		// "noImplicitAny": true,
-		"target": "es2015"
+		"target": "es2015",
+		"types": ["node"]
 	},
 	"include": ["./*.ts"]
 }
