--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "1.0.1-beta.2",
+  "version": "1.0.1",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "build/index.js",
