fix: a bunch of bugfixes from live tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
-    "build/**/*.js"
+    "build/**/*.js",
+    "build/**/*.d.ts",
+    "config/"
   ],
   "author": {
     "name": "AlCalzone",
