--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zwave-js",
-  "version": "1.1.1",
+  "version": "1.2.0-beta.2",
   "description": "Z-Wave driver written entirely in JavaScript/TypeScript",
   "keywords": [],
   "main": "build/index.js",
