--- a/.github/workflows/cc-bot.yml
+++ b/.github/workflows/cc-bot.yml
@@ -7,6 +7,7 @@ on:
       - '*'
     paths:
       - 'src/lib/commandclass/**/*.ts'
+      - '.github/actions/gh-cc-table/*'
 
 jobs:
   gh-cc-table:
