--- a/.github/workflows/cc-bot.yml
+++ b/.github/workflows/cc-bot.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Update CC table
-      uses: ./.github/actions/gh-cc-table
+      uses: .github/actions/gh-cc-table
