--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
+    "@actions/exec": "^1.0.0",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
