--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
+    "@actions/core": "^1.0.0",
     "@actions/exec": "^1.0.0",
+    "@actions/github": "^1.0.0",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
