--- a/.github/workflows/cc-bot.yml
+++ b/.github/workflows/cc-bot.yml
@@ -1,13 +1,10 @@
 name: Update CC implementation status
 
-# Only run this when CC files are changed in the master branch
+# Only run this on changes to the master branch
 on:
   push:
     branches:
       - master
-    paths:
-      - 'src/lib/commandclass/**/*.ts'
-      - '.github/actions/gh-cc-table/*'
 
 jobs:
   gh-cc-table:
@@ -25,6 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm ci
+    # The script will check if there are changes before updating the issue
     - name: Update CC table
       uses: ./.github/actions/gh-cc-table
       with:
