--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
 name: Lint files
 
-# Only run this on branch pushs
+# Only run this on branch pushs and in PRs
 on:
   push:
     branches:
       - '*'
+  pull_request: {}
 
 jobs:
   check-and-lint:
