--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ name: Test and Release
 # Only run this on tagged versions
 on:
   push:
-    branches:
-      - refs/tags/*
+    tags:
+      - 'v*'
 
 jobs:
   # Performs quick checks before the expensive test runs
