--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^24.0.9",
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
+    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.0.0",
     "@types/semver": "^6.0.0",
     "@types/serialport": "^7.0.1",
@@ -80,6 +81,8 @@
     "ansi-colors": "^4.0.1",
     "fs-extra": "^8.0.0",
     "json5": "^2.1.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "reflect-metadata": "^0.1.13",
     "serialport": "^7.1.5",
     "winston": "^3.2.1"
