--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
 	],
 	"plugins": [
 		"@babel/plugin-proposal-numeric-separator",
+		"@babel/plugin-proposal-optional-chaining",
+		"@babel/plugin-proposal-nullish-coalescing-operator",
 		"@babel/proposal-object-rest-spread",
 		["@babel/plugin-proposal-decorators", { "legacy": true }],
 		["@babel/plugin-proposal-class-properties", { "loose": true }]
