--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
     "@commitlint/cli": "^8.0.0",
@@ -54,21 +56,21 @@
     "@types/serialport": "^7.0.1",
     "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^13.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "clipboardy": "^2.1.0",
     "commitizen": "^4.0.3",
     "coveralls": "^3.0.3",
     "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.0",
     "jest": "^24.1.0",
     "jest-circus": "^24.7.1",
     "jest-extended": "^0.11.1",
     "mockdate": "2.0.5",
-    "prettier": "^1.17.0",
+    "prettier": "github:prettier/prettier",
     "rimraf": "^3.0.0",
     "semver": "^6.0.0",
     "supports-color": "^7.0.0",
@@ -97,7 +99,7 @@
     "prebuild": "npm run generateCCAPIInterface",
     "prewatch": "npm run generateCCAPIInterface",
     "test:reset": "jest --clear-cache",
-    "test:ts": "jest",
+    "test:ts": "jest --runInBand",
     "test:watch": "npm run test:ts -- --watch",
     "test": "npm run test:watch",
     "coverage": "npm run test:ts -- --collect-coverage",
