--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "@actions/core": "^1.0.0",
-    "@actions/exec": "^1.0.0",
-    "@actions/github": "^1.0.0",
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@actions/core": "^1.2.0",
+    "@actions/exec": "^1.0.1",
+    "@actions/github": "^1.1.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.0",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@fimbul/mithotyn": "^0.21.0",
-    "@fimbul/wotan": "^0.21.0",
+    "@fimbul/wotan": "^0.21.1",
     "@types/ansi-colors": "^3.2.0",
     "@types/debug": "4.1.5",
-    "@types/fs-extra": "^8.0.0",
-    "@types/jest": "^24.0.9",
+    "@types/fs-extra": "^8.0.1",
+    "@types/jest": "^24.0.22",
     "@types/json5": "0.0.30",
     "@types/mockdate": "^2.0.0",
     "@types/moment-timezone": "^0.5.12",
@@ -56,35 +56,35 @@
     "@types/serialport": "^7.0.1",
     "@types/triple-beam": "^1.3.0",
     "@types/yargs": "^13.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "clipboardy": "^2.1.0",
     "commitizen": "^4.0.3",
-    "coveralls": "^3.0.3",
+    "coveralls": "^3.0.7",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.0",
-    "jest": "^24.1.0",
-    "jest-circus": "^24.7.1",
-    "jest-extended": "^0.11.1",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "jest-circus": "^24.9.0",
+    "jest-extended": "^0.11.2",
     "mockdate": "2.0.5",
     "prettier": "github:prettier/prettier",
     "rimraf": "^3.0.0",
-    "semver": "^6.0.0",
-    "supports-color": "^7.0.0",
-    "ts-node": "^8.0.2",
-    "typescript": "^3.7.1-rc",
-    "yargs": "^14.0.0"
+    "semver": "^6.3.0",
+    "supports-color": "^7.1.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.7.2",
+    "yargs": "^14.2.0"
   },
   "dependencies": {
     "alcalzone-shared": "^2.0.0",
-    "ansi-colors": "^4.0.1",
-    "fs-extra": "^8.0.0",
-    "json5": "^2.1.0",
+    "ansi-colors": "^4.1.1",
+    "fs-extra": "^8.1.0",
+    "json5": "^2.1.1",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
+    "moment-timezone": "^0.5.27",
     "reflect-metadata": "^0.1.13",
     "serialport": "^8.0.5",
     "winston": "^3.2.1"
