--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
 	"presets": [
-		["@babel/preset-env", { "targets": { "node": "current" } }],
-		"@babel/preset-typescript"
+		"@babel/preset-typescript",
+		["@babel/preset-env", { "targets": { "node": "current" } }]
 	],
 	"plugins": [
+		["@babel/plugin-transform-typescript", { "allowDeclareFields": true }],
 		"@babel/plugin-proposal-numeric-separator",
 		"@babel/plugin-proposal-optional-chaining",
 		"@babel/plugin-proposal-nullish-coalescing-operator",
