chore: combine test workflow files into a single one

--- a/package.json
+++ b/package.json
@@ -100,10 +100,11 @@
     "prewatch": "npm run generateCCAPIInterface",
     "test:reset": "jest --clear-cache",
     "test:ts": "jest",
+    "test:ci": "npm run test:ts -- --runInBand",
     "test:watch": "npm run test:ts -- --watch",
     "test": "npm run test:watch",
     "coverage": "npm run test:ts -- --collect-coverage",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls -v",
+    "coverage:ci": "npm run test:ci -- --collect-coverage",
     "show-coverage": "npm run coverage && start ./coverage/index.html",
     "lint:ts": "eslint --ext .ts src",
     "lint:wotan": "wotan",
