chore: switch to external release script

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.1",
     "@actions/github": "^1.1.0",
+    "@alcalzone/release-script": "^1.0.0",
     "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
@@ -111,7 +112,7 @@
     "lint:wotan": "wotan",
     "lint:config": "ts-node maintenance/lintConfigFiles.ts",
     "lint": "npm run lint:ts && npm run lint:wotan",
-    "release": "ts-node maintenance/release.ts",
+    "release": "release-script",
     "implemented_ccs": "ts-node maintenance/implemented_ccs.ts",
     "gh-cc-table": "npm run implemented_ccs -- --flavor=github --only-incomplete",
     "usbdebug": "cmd.exe /c \"test\\usbdebug.bat\"",
