--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "yargs": "^15.0.1"
   },
   "dependencies": {
+    "@sentry/integrations": "^5.8.0",
+    "@sentry/node": "^5.9.0",
     "alcalzone-shared": "^2.0.0",
     "ansi-colors": "^4.1.1",
     "fs-extra": "^8.1.0",
